--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,13 @@
 <ion-header>
   <ion-toolbar color="tertiary">
+
+    <!-- Logo -->
     <ion-buttons slot="start">
       <ion-button>ACK St James Koromosho</ion-button>
     </ion-buttons>
 
-    <ion-buttons slot="end">
+    <!-- Desktop Navigation -->
+    <ion-buttons slot="end" class="desktop-nav">
       <ion-button routerLink="/main/home" routerLinkActive="active-link" >Home</ion-button>
       <ion-button routerLink="/main/about" routerLinkActive="active-link">About</ion-button>
       <ion-button routerLink="/main/ministries" routerLinkActive="active-link">Ministries</ion-button>
@@ -12,7 +15,25 @@
       <ion-button routerLink="/main/contact" routerLinkActive="active-link">Contact</ion-button>
     </ion-buttons>
 
+    <!-- Mobile Hamburger -->
+     <ion-buttons slot="end" class="mobile-nav">
+      <ion-button fill="clear" (click)="toggleMenu()">
+        <ion-icon name="menu-outline" ></ion-icon>
+      </ion-button>
+     </ion-buttons>
+
   </ion-toolbar>
+
+  <!-- Mobile Dropdown Menu -->
+  <div class="mobile-menu" *ngIf="menuOpen">
+    <ion-button fill="clear" routerLink="/main/home" routerLinkActive="active-link" (click)="closeMenu()">Home</ion-button>
+    <ion-button fill="clear" routerLink="/main/about" routerLinkActive="active-link" (click)="closeMenu()">About</ion-button>
+    <ion-button fill="clear" routerLink="/main/ministries" routerLinkActive="active-link" (click)="closeMenu()">Ministries</ion-button>
+    <ion-button fill="clear" routerLink="/main/sermons" routerLinkActive="active-link" (click)="closeMenu()">Sermons</ion-button>
+    <ion-button fill="clear" routerLink="/main/contact" routerLinkActive="active-link" (click)="closeMenu()">Contact</ion-button>
+  </div>
+
+
 </ion-header>
 
 
