--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -178,9 +178,8 @@
       </div>
 
       <div class="map-container">
-        <!-- Google Maps Embed - Replace with your actual church location -->
         <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15959.234567890123!2d36.0670583!3d-0.3030988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMMKwMTgnMTEuMiJTIDM2wrAwNCcwMS40IkU!5e0!3m2!1sen!2ske!4v1234567890123!5m2!1sen!2ske"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.640432871108!2d35.18660937574752!3d0.5410474636400188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1781aba4a59e3be1%3A0xa888c666459e6fc1!2sAnglican%20Church%20of%20Kenya%20(ACK)%20-%20Koromosho!5e0!3m2!1sen!2suk!4v1769169080716!5m2!1sen!2suk"
           width="100%" 
           height="450" 
           style="border:0;" 
@@ -188,21 +187,15 @@
           loading="lazy" 
           referrerpolicy="no-referrer-when-downgrade">
         </iframe>
-        
-        <!-- Alternative: If you prefer a static map placeholder -->
-        <!-- <div class="map-placeholder">
-          <ion-icon name="map-outline"></ion-icon>
-          <p>Interactive Map</p>
-          <ion-button color="primary">Open in Google Maps</ion-button>
-        </div> -->
       </div>
+      
 
       <div class="directions-info">
         <h3>Directions & Landmarks</h3>
         <ul>
           <li>
             <ion-icon name="car-outline"></ion-icon>
-            <span>By Car: Take the Nakuru-Eldoret Highway, turn at Koromosho Junction</span>
+            <span>By Car: Take the Eldoret- Salient Highway, turn at Simat Junction</span>
           </li>
           <li>
             <ion-icon name="bus-outline"></ion-icon>
@@ -210,7 +203,7 @@
           </li>
           <li>
             <ion-icon name="navigate-outline"></ion-icon>
-            <span>Landmark: Near Koromosho Primary School</span>
+            <span>Landmark: Near Kaptinga Shopping Centre</span>
           </li>
         </ul>
       </div>
