--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -84,39 +84,15 @@
 <section class="featured-section">
   <div class="container">
     <div class="features-grid">
+
+      <div class="feature-card" *ngFor="let item of features">
+        <div class="feature-icon">
+          <ion-icon name={{item.icon}} ></ion-icon>
+        </div>
+          <h3>{{item.title}}</h3>
+          <p>{{item.description}}</p>
+      </div>
       
-      <div class="feature-card">
-        <div class="feature-icon">
-          <ion-icon name="book-outline"></ion-icon>
-        </div>
-        <h3>Biblical Teaching</h3>
-        <p>Grounded in God's Word, growing in faith</p>
-      </div>
-
-      <div class="feature-card">
-        <div class="feature-icon">
-          <ion-icon name="people-outline"></ion-icon>
-        </div>
-        <h3>Community</h3>
-        <p>A welcoming family for everyone</p>
-      </div>
-
-      <div class="feature-card">
-        <div class="feature-icon">
-          <ion-icon name="heart-outline"></ion-icon>
-        </div>
-        <h3>Worship</h3>
-        <p>Lifting hearts in praise together</p>
-      </div>
-
-      <div class="feature-card">
-        <div class="feature-icon">
-          <ion-icon name="hand-left-outline"></ion-icon>
-        </div>
-        <h3>Service</h3>
-        <p>Making a difference in our community</p>
-      </div>
-
     </div>
   </div>
 </section>
