--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -1,9 +1,18 @@
-<ion-app>
+<!-- <ion-app>
   <app-navbar></app-navbar>
 
   <ion-content fullscreen>
     <ion-router-outlet></ion-router-outlet>
   </ion-content>
+
+  <app-footer></app-footer>
+</ion-app> -->
+
+
+<ion-app>
+
+  <app-navbar></app-navbar>
+  <ion-router-outlet></ion-router-outlet>
 
   <app-footer></app-footer>
 </ion-app>
