add footer to each page

--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -1,18 +1,14 @@
-<!-- <ion-app>
-  <app-navbar></app-navbar>
 
-  <ion-content fullscreen>
+
+<app-navbar></app-navbar>
+  <ion-content>
     <ion-router-outlet></ion-router-outlet>
   </ion-content>
-
-  <app-footer></app-footer>
-</ion-app> -->
+<app-footer></app-footer>
 
 
-<ion-app>
 
-  <app-navbar></app-navbar>
-  <ion-router-outlet></ion-router-outlet>
 
-  <app-footer></app-footer>
-</ion-app>
+
+
+
